--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "vue": "^2.5.11"
   },
   "browserslist": [
@@ -21,6 +26,7 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
